<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        tools:layout_editor_absoluteX="9dp">

        <LinearLayout
            android:id="@+id/back_to_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="5dp"
                android:importantForAccessibility="no"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.04"
                android:lineHeight="30dp"
                android:text="@string/back_to_login"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:height="50dp"
                android:background="@drawable/input_bg"
                android:hint="@string/email_hint"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="2dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:height="50dp"
                android:background="@drawable/input_bg"
                android:hint="@string/password_hint"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="2dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_bg"
                android:hint="@string/Re_password"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="2dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:letterSpacing="0.03"
                android:padding="16dp"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-light"
                android:letterSpacing="0.05"
                android:lineHeight="20dp"
                android:text="@string/or"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="13dp"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="5dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/google" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.03"
                    android:text="@string/continue_with_google"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:letterSpacing="0.03"
                android:lineHeight="20dp"
                android:text="@string/disclaimer1"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="normal" />


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>