<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.03"
            android:text="@string/intro_title"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/intro_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_bg"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.05"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/intro_sign_up"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/signup_button"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.05"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>